2009-02-14  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_http_bind.erl: Allow configuration of maximum
	inactivity period using the new option max_inactivity of
	mod_http_bind (EJAB-512)
	* doc/mod_http_bind.tex: Document new option

2009-01-13  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_http_bind.erl: Include condition in http-bind
	terminate body when service stops (EJAB-792)

2008-09-17  Mickael Remond  <mickael.remond@process-one.net>

	* src/web/ejabberd_http_bind.erl: Implement packets reordering
	to avoid race conditions (EJAB-724).

2008-07-28  Badlop  <badlop@process-one.net>

	* doc/mod_http_bind.tex: Update LaTeX code for section title

2008-03-12  Badlop  <badlop@process-one.net>

	* src/web/mod_http_bind.erl (start): Provide explanation in error
	message when module is already started for another vhost

2007-12-22  Badlop  <badlop@process-one.net>

	* doc/mod_http_bind.tex: Added explanation about http_bind option
	to ejabberd_http

2007-12-21  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_http_bind.erl: Removed small warning

2007-12-20  Alexey Shchepin  <alexey@process-one.net>

	* src/web/ejabberd_http_bind.erl: Bugfixes

2007-12-18  Badlop  <badlop@process-one.net>

	* doc/mod_http_bind.tex: Added documentation for the ejabberd
	guide

2007-12-18  Alexey Shchepin  <alexey@process-one.net>

	* src/web/ejabberd_http_bind.erl: Removed receive_loop

2007-11-28  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_http_bind.erl (migrate_database): Bugfix when
	table does not exist (thanks to Justin Kirby)

2007-11-27  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_http_bind.erl (start): Migration code for
	people using previous version of the HTTP binding
	module (EJAB-390)

	* ChangeLog: Added ChangeLog, autogenerated using svn2cl.

2007-11-15 mremond

	* *.erl: Making sure SVN properties are correctly set.

2007-11-08 badlop

	* src/web/ejabberd_http_bind.erl: ejabberd_http_bind.erl: Don't